<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/shape_analyze_result_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/status_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:textColor="@color/color_757575"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E6E6E6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:text="@string/number_signs" />

            <TextView
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:text="@string/dispatch_time" />

            <TextView
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:text="@string/dispatch_name" />

            <TextView
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:text="@string/place" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/number_tv"
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:textColor="@color/color_757575"/>

            <TextView
                android:id="@+id/time_tv"
                style="@style/mine_text_size_color1"
                android:layout_height="42dp"
                android:textColor="@color/color_757575"/>

            <TextView
                android:id="@+id/name_tv"
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:textColor="@color/color_757575" />

            <TextView
                android:id="@+id/place_tv"
                style="@style/mine_text_size_color"
                android:layout_height="42dp"
                android:textColor="@color/color_757575"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>