<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F0F3F5">

    <include
        android:id="@+id/login_title"
        layout="@layout/fragment_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_head"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:id="@+id/name_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_name"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/login_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/name_iv"
                android:background="@null"
                android:layout_centerVertical="true"
                android:paddingLeft="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:hint="@string/login_name"
                android:textColor="@color/color_FF4A4A4A"
                android:textColorHint="@color/color_4D000000"
                android:textCursorDrawable="@null"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/login_password_et"
                android:maxLines="1"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_33000000"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="17dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:id="@+id/password_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/password_iv"
                android:background="@null"
                android:paddingLeft="17dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:hint="@string/login_password"
                android:textColorHint="@color/color_4D000000"
                android:textColor="@color/color_FF4A4A4A"
                android:textCursorDrawable="@null"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_33000000"/>

        <CheckBox
            android:id="@+id/password_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableLeft="@drawable/selector_checkbox"
            android:text="@string/remember_password"
            android:textColor="@color/color_4D000000"
            android:drawablePadding="13dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_analyze_btn"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/notosanshans_regular"/>

        <TextView
            android:id="@+id/register_tv"
            style="@style/mine_text_size_color"
            android:text="@string/register"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_FF1989FA"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>